Added demo recording and demo playback.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,8 @@
         "streambuf": "cpp",
         "system_error": "cpp",
         "typeindex": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "random": "cpp",
+        "vector": "cpp"
     }
 }
