--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,9 +1,37 @@
 {
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
-    "version": "0.1.0",
-    "command": "${workspaceRoot}/build32.bat",
-    "isShellCommand": true,
-    "args": [],
-    "showOutput": "always"
+    "version": "2.0.0",
+    "tasks": [
+        {
+            "taskName": "Build for 32-bit",
+            "type": "shell",
+            "command": "${workspaceRoot}/build32.bat",
+            "group": "build",
+            "presentation": {
+                "echo": true,
+                "reveal": "silent",
+                "focus": false,
+                "panel": "dedicated"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ]
+        },
+        {
+            "taskName": "Build for 64-bit",
+            "type": "shell",
+            "command": "${workspaceRoot}/build64.bat",
+            "group": "build",
+            "presentation": {
+                "echo": true,
+                "reveal": "silent",
+                "focus": false,
+                "panel": "dedicated"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ]
+        }
+    ]
 }
